--- a/Client/Pages/DiveCharts/ViewDiveCharts.razor
+++ b/Client/Pages/DiveCharts/ViewDiveCharts.razor
@@ -1,4 +1,5 @@
 ﻿@page "/viewdivecharts"
+
 @inject HttpClient client
 @inject IJSRuntime js
 
@@ -8,42 +9,32 @@
 
 @if (AppState.IsAuthenticated)
 {
-    @if (NDLPG_result == null)
-    {
-        title = "Loading...";
-    }
-    else
-    {
-        <div class="row">
-            <div class="col-1"></div>
-            <div class="col-auto mb-3 card mx-auto card-transparent">
-                <ul class="nav nav-pills">
-                    <li class="nav-item">
-                        <a class="nav-link active" data-toggle="pill" href="#ndlgd">No Decompression Limits and Group Designation</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" data-toggle="pill" href="#sic">Surface Interval Credit Table</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" data-toggle="pill" href="#abtsne">Repetitive Dive Timetable</a>
-                    </li>
-                </ul>
-                <div class="tab-content ">
-                    <div class="tab-pane container active float-left" id="ndlgd">
-                        <TheDiveLog.Client.Pages.Partials.NDLChart></TheDiveLog.Client.Pages.Partials.NDLChart>
-                    </div>
-                    <div class="tab-pane container fade float-left" id="sic">
-                        <TheDiveLog.Client.Pages.Partials.SICChart></TheDiveLog.Client.Pages.Partials.SICChart>
-                    </div>
-                    <div class="tab-pane container fade float-left" id="abtsne">
-                        <TheDiveLog.Client.Pages.Partials.RDTChart></TheDiveLog.Client.Pages.Partials.RDTChart>
-                    </div>
+    <div class="row">
+        <div class="col-11 mb-3 card mx-auto card-transparent">
+            <ul class="nav nav-pills">
+                <li class="nav-item">
+                    <a class="nav-link active" data-toggle="pill" href="#ndlgd">No Decompression Limits and Group Designation</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" data-toggle="pill" href="#sic">Surface Interval Credit Table</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" data-toggle="pill" href="#abtsne">Repetitive Dive Timetable</a>
+                </li>
+            </ul>
+            <div class="tab-content ">
+                <div class="tab-pane container active float-left" id="ndlgd">
+                    <TheDiveLog.Client.Pages.Partials.NDLChart></TheDiveLog.Client.Pages.Partials.NDLChart>
+                </div>
+                <div class="tab-pane container fade float-left" id="sic">
+                    <TheDiveLog.Client.Pages.Partials.SICChart></TheDiveLog.Client.Pages.Partials.SICChart>
+                </div>
+                <div class="tab-pane container fade float-left" id="abtsne">
+                    <TheDiveLog.Client.Pages.Partials.RDTChart></TheDiveLog.Client.Pages.Partials.RDTChart>
                 </div>
             </div>
         </div>
-
-
-    }
+    </div>
     <br />
 }
 else
@@ -53,18 +44,4 @@ else
 }
 
 @code {
-    DiveChartView dcv { get; set; }
-
-    List<DiveChartView.NDLGD> NDLPG_result { get; set; }
-    List<DiveChartView.SIC> SIC_result { get; set; }
-    List<DiveChartView.RDT> RDT_result { get; set; }
-
-    protected override async Task OnInitializedAsync()
-    {
-        dcv = await client.GetFromJsonAsync<DiveChartView>($"api/padi/byMeasurement?mesurementid=35");
-
-        NDLPG_result = dcv.ListNDLPGD;
-        SIC_result = dcv.ListSIC;
-        RDT_result = dcv.ListRDT;
-    }
 }
