--- a/Client/Pages/Components/CertModal.razor
+++ b/Client/Pages/Components/CertModal.razor
@@ -6,13 +6,16 @@
     <div class="modal-dialog modal-xl" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title">Add Edit Certifications</h5>
+                <h5 class="modal-title">@buttontext Certification</h5>
                 <button type="button" class="close" data-dismiss="modal" @onclick="() => CertCancel()" aria-label="Cancel">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
             <div class="modal-body">
                 <EditForm Model="@certinfo">
+                    @{
+                        certinfo.UserID = new Guid(AppState.UserId);
+                    }
                     <div class="row">
                         <div class="col-6 col-sm-6 col-md-6 col-lg-4">
                             <span class="field-label">Instructors No.</span>
@@ -27,7 +30,7 @@
                             <ValidationMessage For="@(() => certinfo.InstrName)" />
                         </div>
                     </div>
-                    <div class="row">                        
+                    <div class="row">
                         <div class="col-12 col-sm-12 col-md-12 col-lg-6">
                             <span class="field-label">Location</span>
                             <br />
@@ -66,7 +69,7 @@
                 </EditForm>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-primary">Save changes</button>
+                <button type="button" class="btn btn-primary" @onclick="() => SaveCert()">@buttontext</button>
                 <button type="button" class="btn btn-secondary" data-dismiss="modal" @onclick="() => CertCancel()">Cancel</button>
             </div>
         </div>
@@ -79,7 +82,10 @@
 }
 
 @code {
+    [Parameter] public bool Act { get; set; }
+    [Parameter] public int Id { get; set; }
 
+    string buttontext = string.Empty;
     Certifications certinfo { get; set; } = new Certifications();
 
     public Guid Guid = Guid.NewGuid();
@@ -87,14 +93,41 @@
     public string ModalClass = "";
     public bool ShowBackdrop = false;
 
-    public async void CertOpen(long certId)
+    public async void CertOpen(long certId, bool act)
     {
-        certinfo = await http.GetFromJsonAsync<Certifications>($"api/diver/byCertId?certid={certId}");
+        Act = act;
+
+        if (Act)
+        {
+            buttontext = "Update";
+            certinfo = await http.GetFromJsonAsync<Certifications>($"api/cert/byCertId?certid={certId}");
+        }
+        else
+        {
+            buttontext = "Add";
+            certinfo = new Certifications();
+        }
 
         ModalDisplay = "block;";
         ModalClass = "Show";
         ShowBackdrop = true;
         StateHasChanged();
+    }
+
+    protected async Task SaveCert()
+    {
+        if (Act)
+        {
+            await http.PutAsJsonAsync("api/cert", certinfo);
+            await js.InvokeVoidAsync("alert", $"Updated Successfully!");
+            CertCancel();
+        }
+        else
+        {
+            await http.PostAsJsonAsync("api/cert", certinfo);
+            await js.InvokeVoidAsync("alert", $"Added Successfully!");
+            CertCancel();
+        }
     }
 
     public void CertCancel()
