--- a/Client/Pages/DiveLog/DiveForm.razor
+++ b/Client/Pages/DiveLog/DiveForm.razor
@@ -15,6 +15,9 @@
                 </div>
                 <div id="dive" class="collapse show" aria-labelledby="diveheading" data-parent="#diveaccordion">
                     <div class="card-body">
+                        @{ 
+                            div.UserID = new Guid(AppState.UserId);
+                        }
                         <div class="row">
                             <div class="col-12 col-sm-6 col-md-6 col-lg-6">
                                 <span class="field-label">Location</span>
