--- a/Client/_Imports.razor
+++ b/Client/_Imports.razor
@@ -7,8 +7,13 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Authentication
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
+
 @using TheDiveLog.Client
 @using TheDiveLog.Client.Shared
+@using TheDiveLog.Client.Services
+@using TheDiveLog.Client.Pages.Partials
+@using TheDiveLog.Client.Pages.Components
+
 @using TheDiveLog.Shared.Models
 @using TheDiveLog.Shared.Models.DiveTables
 @using TheDiveLog.Shared.Models.DiverTables
@@ -19,4 +24,3 @@
 @using Mobsites.Blazor
 @using Radzen
 @using Radzen.Blazor
-@using TheDiveLog.Client.Services
